[package]
name = "lxddns"
version = "3.0.2"
authors = ["benaryorg <binary@benary.org>"]
edition = "2018"
license = "ISC"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
async-std = { version = "^1.12", features = ["attributes", "unstable"] }
clap = { version = "^4.0", features = ["derive", "env"] }
env_logger = { version = "^0.10", features = ["color", "auto-color"] }
futures = "^0.3.25"
getset = "^0.1.2"
lapin = "^2.1"
log = "^0.4.17"
regex_static = "^0.1.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
uuid = { version = "^1.2", features = ["serde", "v4"] }

