[package]
name = "lxddns"
version = "4.0.2"
authors = ["benaryorg <binary@benary.org>"]
edition = "2018"
license = "ISC"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.3", features = ["rustls"], optional = true }
anyhow = "^1.0"
async-trait = "^0.1.64"
clap = { version = "^4.0", features = ["derive", "env"] }
env_logger = { version = "^0.10", features = ["color", "auto-color"] }
futures = "^0.3.25"
getset = "^0.1.2"
lapin = { version = "^2.1", optional = true }
log = "^0.4.17"
regex_static = "^0.1.1"
reqwest = { version = "^0.11.14", features = ["rustls-tls-native-roots", "rustls", "json"], default-features = false, optional = true }
rustls = { version = "^0.20.8", optional = true }
rustls-pemfile = { version = "^1.0", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tokio = { version = "^1.25", features = ["full"] }
tokio-stream = { version = "^0.1.12", features = ["net"] }
uuid = { version = "^1.2", features = ["serde", "v4"], optional = true }

[features]
default = [ "http", "amqp" ]
http = [ "dep:actix-web", "dep:reqwest", "dep:rustls", "dep:rustls-pemfile" ]
amqp = [ "dep:lapin", "dep:uuid" ]

[[bin]]
name = "lxddns-http"
required-features = [ "http" ]

[[bin]]
name = "lxddns-amqp"
required-features = [ "amqp" ]
