[package]
name = "lxddns"
description = "Couple LXD, PowerDNS, and lxddns for public IPv6 DNS resolution for your containers."
homepage = "https://github.com/benaryorg/lxddns"
version = "5.0.0"
authors = ["benaryorg <binary@benary.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.3", features = ["rustls-0_23"], optional = true }
anyhow = "^1.0"
async-trait = "^0.1.64"
clap = { version = "^4.4.18", features = ["derive", "env"] }
env_logger = { version = "^0.11", features = ["color", "auto-color"] }
futures = "^0.3.25"
getset = "^0.1.2"
lapin = { version = "^2.1", optional = true }
log = "^0.4.17"
regex_static = "^0.1.1"
reqwest = { version = "^0.12.3", features = ["rustls-tls-native-roots", "json"], default-features = false, optional = true }
rustls = { version = "^0.23.0", optional = true }
rustls-pemfile = { version = "^2.0", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tokio = { version = "^1.25", features = ["full"] }
tokio-stream = { version = "^0.1.12", features = ["net"] }
uuid = { version = "^1.2", features = ["serde", "v4"], optional = true }

[features]
default = [ "http", "amqp" ]
http = [ "dep:actix-web", "dep:reqwest", "dep:rustls", "dep:rustls-pemfile" ]
amqp = [ "dep:lapin", "dep:uuid" ]

[[bin]]
name = "lxddns-http"
required-features = [ "http" ]

[[bin]]
name = "lxddns-amqp"
required-features = [ "amqp" ]
